--- a/react/src/scss/global.scss
+++ b/react/src/scss/global.scss
@@ -42,3 +42,17 @@
   cursor: pointer;
   //background: #043f3b;
 }
+
+.cluster-icon {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  font-weight: bold;
+  background: rgb(1, 113, 117);
+  color: white;
+  border-radius: 50%;
+  cursor: pointer;
+}
