--- a/react/src/scss/map.scss
+++ b/react/src/scss/map.scss
@@ -1,3 +1,29 @@
+
+.map-icon {
+  display: block;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 8px solid rgb(1, 113, 117);
+  cursor: pointer;
+}
+
+.cluster-icon {
+  margin-top: -25px;
+  margin-left: -25px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32px;
+  font-weight: bold;
+  background: rgb(1, 113, 117);
+  color: white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
 .Map {
   display: flex;
   justify-content: space-between;
@@ -11,4 +37,7 @@
     height: 100%;
     width: 500px;
   }
+}
+.MapInput {
+  height: 500px;
 }
