--- a/react/src/scss/profile/CodeVerification.scss
+++ b/react/src/scss/profile/CodeVerification.scss
@@ -6,22 +6,35 @@
     width: 60px;
     height: 60px;
     input {
-      width: 60px;
+      font: inherit;
+      letter-spacing: inherit;
+      box-sizing: content-box;
+      background: none;
+      height: 1.4375em;
+      margin: 0;
+      -webkit-tap-highlight-color: transparent;
+      display: block;
+      min-width: 0;
+      width: 100%;
+      -webkit-animation-name: mui-auto-fill-cancel;
+      animation-name: mui-auto-fill-cancel;
+      -webkit-animation-duration: 10ms;
+      animation-duration: 10ms;
+      padding: 10.5px 14px;
       text-align: center;
-      font-size: 48px;
-      font-weight: bold;
-      border: 1px solid #000;
-      border-radius: 3px;
+      border-radius: 4px;
+      color: rgba(0, 0, 0, 0.87);
+      overflow: hidden;
+      border: 1px solid rgba(0, 0, 0, 0.23);
+      font-size: 26px;
+      font-weight: 500;
+      font-family: "Montserrat", sans-serif;
+    }
+    &._error input {
+      border-color: red;
+      color: red;
       &:focus {
         outline: none;
-      }
-      &::-webkit-outer-spin-button,
-      &::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-      }
-      &[type=number] {
-        -moz-appearance: textfield;
       }
     }
   }
