--- a/react/src/scss/main.scss
+++ b/react/src/scss/main.scss
@@ -4,3 +4,6 @@
 @import 'profile.scss';
 @import 'auth.scss';
 @import 'menu.scss';
+@import 'home.scss';
+@import 'catalog.scss';
+@import 'search.scss';
