added logic to catalog tree

--- a/react/src/scss/catalog.scss
+++ b/react/src/scss/catalog.scss
@@ -21,4 +21,8 @@
         padding-top: 5px;
         padding-bottom: 5px;
     }
+    &__Title {
+        margin-top: 5px;
+        display: inline-block;
+    }
 }
