styles for Ksusha

--- a/react/src/scss/menu.scss
+++ b/react/src/scss/menu.scss
@@ -50,6 +50,8 @@ a {
   }
   &__Auth {
     &__Button {
+      margin-right: 7px;
+      margin-left: 7px;
       padding: 8px 32px;
       border: 2px solid $main;
       border-radius: 12px;
