--- a/react/src/scss/catalog.scss
+++ b/react/src/scss/catalog.scss
@@ -1,3 +1,8 @@
+.Category {
+    margin-top: 50px;
+    padding-bottom: 50px;
+}
+
 .Catalog {
     display: flex;
     justify-content: center;
@@ -24,5 +29,42 @@
     &__Title {
         margin-top: 5px;
         display: inline-block;
+    }
+}
+
+.Categories {
+    h1 {
+        margin-top: 30px;
+        font-size: 24px;
+        margin-bottom: 0;
+    }
+    &__Wrapper {
+        padding-top: 15px;
+        padding-bottom: 30px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+    &__Item {
+
+        &__Wrapper {
+            width: 33.3%;
+            flex: 0 0 33%;
+            padding-left: 15px;
+            padding-right: 15px;
+            margin-bottom: 15px;
+        }
+        img {
+            max-width: 100%;
+        }
+        h3 {
+            color: #000;
+            font-size: 16px;
+            font-weight: 500;
+            text-align: center;
+            margin-top: 5px;
+        }
     }
 }
