--- a/react/src/scss/catalog.scss
+++ b/react/src/scss/catalog.scss
@@ -51,13 +51,15 @@
 
         &__Wrapper {
             width: 33.3%;
-            flex: 0 0 33%;
+            flex: 0 0 33.3%;
             padding-left: 15px;
             padding-right: 15px;
             margin-bottom: 15px;
         }
         img {
-            max-width: 100%;
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
         }
         h3 {
             color: #000;
