--- a/react/src/scss/global.scss
+++ b/react/src/scss/global.scss
@@ -46,7 +46,7 @@
   margin-top: 50px;
   margin-bottom: 50px;
 }
-body, html, button, input {
+body, html, button, input, textarea, label, select {
   font-family: Montserrat, sans-serif !important;
 }
 
