--- a/react/src/scss/main.scss
+++ b/react/src/scss/main.scss
@@ -6,5 +6,6 @@
 @import 'menu.scss';
 @import 'home.scss';
 @import 'catalog.scss';
+@import 'pricing.scss';
 @import 'search.scss';
 @import 'advertisements.scss';
