--- a/react/src/scss/advertisement.scss
+++ b/react/src/scss/advertisement.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
   }
   &__Photos {
-    width: 400px;
+    width: 600px;
   }
   &__Content {
     width: calc(100% - 400px);
@@ -18,6 +18,38 @@
       margin-top: 15px;
       margin-bottom: 15px;
     }
+  }
+
+  &__Seller {
+    &__Content {
+      display: flex;
+      align-items: center;
+      color: $main;
+      cursor: pointer;
+      font-weight: 500;
+      gap: 30px;
+    }
+  }
+  &__Tags {
+    &__Item {
+      display: inline-block;
+      margin-right: 5px;
+      background: $main;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 12px;
+      font-size: 14px;
+
+    }
+  }
+  p {
+    margin-bottom: 5px;
+  }
+  &__Created {
+    margin-top: 3px;
+    font-size: 14px;
+    font-weight: 400;
+    cursor: pointer;
   }
   &__Price {
     margin-left: 15px;
