--- a/react/src/scss/map.scss
+++ b/react/src/scss/map.scss
@@ -28,10 +28,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
+  height: 500px;
   &__Content {
     height: 100%;
-    width: calc(100% - 500px);
+    width: 100%;
   }
   &__Item {
     height: 100%;
