--- a/react/src/scss/advertisement.scss
+++ b/react/src/scss/advertisement.scss
@@ -57,3 +57,23 @@
     font-weight: 600;
   }
 }
+
+@media (max-width: 1200px) {
+  .AdvertisementCard {
+    &__Wrapper {
+      flex-direction: column;
+      & > div {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        margin-right: 0;
+        margin-left: 0;
+      }
+    }
+    &__Photos {
+      img {
+        max-width: 100%;
+      }
+    }
+  }
+}
