--- a/react/src/scss/advertisements.scss
+++ b/react/src/scss/advertisements.scss
@@ -64,8 +64,22 @@
     img {
       width: 100%;
       height: 200px;
-      object-fit: cover;
       border-radius: 10px;
     }
+  }
+}
+
+@media (max-width: 1230px) {
+  .Advertisements {
+    padding-left: 20px;
+    padding-right: 20px;
+
+  }
+  .Advertisement {
+    max-width: 100%;
+    width: 100%;
+    flex: 0 0 100%;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
