--- a/react/src/scss/pricing.scss
+++ b/react/src/scss/pricing.scss
@@ -17,15 +17,18 @@
   &__title {
     padding-top: 15px;
     text-align: center;
+
     h1 {
       margin-bottom: 8px;
       font-size: 32px;
       font-weight: 700;
     }
+
     p {
       color: #807D80;
     }
   }
+
   &__row {
     display: flex;
     justify-content: center;
@@ -34,11 +37,14 @@
     margin-right: -15px;
     margin-left: -15px;
   }
+
   &__content {
     margin-top: 24px;
   }
+
   &__item {
     position: relative;
+
     &__wrapper {
       padding-left: 15px;
       padding-right: 15px;
@@ -46,19 +52,23 @@
       flex: 0 0 33.3%;
       margin-bottom: 30px;
     }
+
     padding: 24px;
     border-radius: 26px;
     background: #FFF;
     box-shadow: 0 4px 2px 2px rgba(0, 0, 0, 0.05), 0 4px 10px 10px rgba(0, 0, 0, 0.04);
+
     &__title {
       display: flex;
       align-items: center;
       justify-content: space-between;
+
       h3 {
         font-size: 24px;
         font-weight: 600;
         display: flex;
         align-items: center;
+
         span {
           padding: 4px 8px;
           background: #8002ff;
@@ -71,11 +81,13 @@
           font-family: Poppins, sans-serif;
         }
       }
+
       &__price {
         display: flex;
         align-items: center;
         font-size: 26px;
         font-weight: 600;
+
         span {
           font-size: 18px;
           color: #807D80;
@@ -84,14 +96,17 @@
         }
       }
     }
+
     &__features {
       color: #000;
+
       h4 {
         font-size: 18px;
         font-weight: 500;
         margin-top: 24px;
         margin-bottom: 15px;
       }
+
       ul {
         padding-left: 0;
       }
@@ -106,15 +121,18 @@
         font-weight: 500;
       }
     }
+
     &__payment-gateways {
       position: absolute;
       mix-blend-mode: exclusion;
       right: 24px;
       bottom: 24px;
+
       img {
         margin-left: 16px;
       }
     }
+
     &__button {
       color: #8002ff;
       text-decoration: none;
@@ -126,10 +144,12 @@
       font-weight: 500;
     }
   }
+
   &__buttons {
     display: flex;
     justify-content: center;
     align-items: center;
+
     a {
       @include button;
       background: #8002ff;
@@ -143,10 +163,25 @@
 }
 
 @media (max-width: 992px) {
+  .pricing__item {
+    h3 {
+      font-size: 18px;
+    }
+    p {
+      font-size: 14px;
+    }
+  }
+  .pricing__item__title__price {
+    font-size: 16px;
+  }
+  .pricing__item__button {
+    text-align: left;
+  }
   .pricing {
     &__row {
       flex-direction: column;
     }
+
     &__item {
       &__wrapper {
         width: 100%;
