--- a/react/src/scss/global.scss
+++ b/react/src/scss/global.scss
@@ -163,6 +163,7 @@ body, html, button, input, textarea, label, select {
 }
 
 .chat-item {
+  margin-top: 15px;
   display: flex;
   align-items: center;
   padding: 15px;
